--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@ code {
   background-color: #fecdd3;
   color: #be123c;
 }
+.bg-landing{
+  background-image: url('../src/assets/bg-landing.svg');
+  background-repeat: no-repeat;
+}
 /* untuk reusable css */
 @layer components {
   .btn-warning {
